# chopin

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Makefile  README.md  app.py  composer.py  dashboard.py  flake8  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  sandbox.py  schemas.py  setup.py  textual_app.css  textual_app.py  utils.py
.github/workflows/: doc.yml
.streamlit/: config.toml
app/: __init__.py  app.py  buttons.py  compose.py  conversion.py  home.py  information.py  main.py  names.py  queue.py  recommend.py  widgets.py
app/pages/: __init__.py  compose.py  describe.py
chopin/: __init__.py  constants.py  radiofrance.py  sources.py  utils.py
chopin/cli/: __init__.py  app.py  backup.py  compose.py  doppelganger.py  from_queue.py  main.py  queue.py  restore.py  shuffle.py
chopin/client/: __init__.py  artists.py  endpoints.py  genres.py  playback.py  playlists.py  settings.py  tracks.py  user.py
chopin/entrypoints/: __init__.py  backup.py  classifier.py  compose.py  composer.py  describe.py  describer.py  new_releases.py  queue.py  queuer.py  recommend.py  recommender.py  restore.py  shuffle.py  shuffler.py  train.py
chopin/managers/: __init__.py  client.py  composition.py  playlist.py  recommendation.py  selection.py  spotify_client.py  track.py
chopin/ml/: data.py
chopin/schemas/: __init__.py  album.py  artist.py  base.py  composer.py  playlist.py  spotify_client.py  track.py  user.py
chopin/tools/: __init__.py  dates.py  dictionaries.py  logger.py  strings.py
css/: chopin-app.css  custom.css  termynal.css
docs/: getting_started.md  index.md
docs/css/: custom.css
docs/guide/: backup_and_restore.md  compose.md  composer.md  describe.md  describer.md  doppelganger.md  index.md  queue.md  queuer.md  recommend.md  restore.md  shuffle.md  shuffler.md  sources.md
docs/reference/: client.md  entrypoints.md  index.md  managers.md  schemas.md  sources.md  (+1 more)
entrypoints/: classifier.py  composer.py  describer.py  queuer.py  recommender.py  sandbox.py  train.py
getting_started/: index.html
managers/: client.py  playlist.py  recommendation.py  spotify_client.py  track.py  user.py
ml/: data.py
models/: client.py  config.py  playlist.py  recommendation.py  track.py  tracks.py  user.py
reference/: index.html
schemas/: base.py  composer.py
scripts/: check_install.py
search/: search_index.json
tests/: conftest.py  test_constants.py  test_sources.py  test_utils.py
(+71 files in other folders)
