[project]
name = "chopin"
version = "0.1.0-0"
description = "chopin: compose, download, and describe Spotify playlists"
authors = [{name="pstfni", email="x@y.com"}]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = ["Private :: Do Not Upload"]

dependencies = [
"numpy",
"pandas",
"tqdm",
"emoji",
"ruamel.yaml",
"spotipy",
"pydantic", 
"pydantic_settings",
"pandas",
"python-dotenv",
"coloredlogs",
"typer",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-sugar", "ruff", "uv"]
docs = ["mkdocs", "mkdocstrings", "mkdocstrings-python", "mkdocs-material"]
app = ["streamlit", "plotly"]

[tool.setuptools.packages.find]
include = ["chopin*"]
namespaces = false

[project.scripts]
chopin = "chopin.cli:app"

